/**
 * Copyright 2020 DreamWorks Animation L.L.C.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

import "scalapb/scalapb.proto";
import "FQRV.proto";
import "ServableSettings.proto";
import "ContractSettings.proto";
import "Flavors.proto";

option (scalapb.options) = {
  package_name: "ai.forestflow.domain"
  flat_package: true
  single_file: false
  import: "ai.forestflow.serving.interfaces.ServeRequest"
};



message BasicServeRequest {
    option (scalapb.message).extends = "ServeRequest";

    /**
      * git path git@github.com:ORG/project.git#v1.10.15.18 (v.Contract.releaseVersion)
      */
    required string path = 1;

    /**
      * path may use a protocol that supports implicit FQRV extraction otherwise fqrv.proto is required
      */
    optional FQRV fqrv = 3;

    /**
      *
      */
    required ServableSettings servableSettings = 4;

    /**
      *
      */
    optional ContractSettings contractSettings = 5;

    /**
      *
      */
    map<string, string> tags = 6;

    required FlavorShim flavor = 7;

}
