/**
 * Copyright 2019 DreamWorks Animation L.L.C.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

import "scalapb/scalapb.proto";
import "FQRV.proto";
import "ServableSettings.proto";
import "ContractSettings.proto";

option (scalapb.options) = {
  package_name: "com.dreamworks.forestflow.domain"
  flat_package: true
  single_file: false
  import: "com.dreamworks.forestflow.serving.impl.BasicH2OMojoLoader"
  import: "com.dreamworks.forestflow.serving.interfaces.Loader"
};



message H2OMojoFlavor {
    option (scalapb.message).extends = "BasicH2OMojoLoader";
    option (scalapb.message).extends = "Loader";
    /**
      * Relative to artifact path defined in ServeRequest
      */
    required string mojoPath = 1;

    /**
      * Version of H2O used to generated mojo file
      */
    optional string version = 2;
}
